--- a/index.html
+++ b/index.html
@@ -65,25 +65,25 @@
 <div id="carouselExampleRide" class="carousel slide" data-bs-ride="SEVEN">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="D-1.0-UHP-17022025-mainbanner-z1-p-iconicsale.jpg" class="d-block w-100" alt="...">
+      <img src="image/img 1.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="D-1.0-UHP-19022025-MainBanners-Z1-P-ASOS-upto50.webp" class="d-block w-100" alt="...">
+      <img src="image/img 2.webp" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="D-1.0-UHP-19022025-MainBanners-Z1-P4-dnmx-teamspirit-min50-extra20.webp" class="d-block w-100" alt="...">
+      <img src="image/img 3.webp" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="D-1.0-UHP-20022025-mainbanner-Z1-P-Plum-vlcc-upto45.webp" class="d-block w-100" alt="...">
+      <img src="image/img 4.webp" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="D-1.0-UHP-20022025-MainBanners-Z1-P-gas-gant-upto50 (1).webp" class="d-block w-100" alt="...">
+      <img src="image/img 5.webp" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="d-1.0-UHP-20022025-MainBanners-Z1-P4-crocs-uspa-min50.avif" class="d-block w-100" alt="...">
+      <img src="image/img 6.avif" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="D-1.0-UHP-20022025-MainBanners-Z1-P4-INDIEPICKS-ACAI-NYRIKA-MIN65.avif" class="d-block w-100" alt="...">
+      <img src="image/img 07.avif" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
@@ -103,13 +103,13 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="1440x128- UHP web RRL_SBI.avif" class="d-block w-100" alt="...">
+      <img src="image/img 08.avif" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="D-1.0-UHP-30092024-bankoffers-Z1-shop&earn-Payupto3-Wallet.avif" class="d-block w-100" alt="...">
+      <img src="image/img 9.avif" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="D-1.0-UHP-30092024-bankoffers-Z1-shop&earn-Payupto3 (2).avif" class="d-block w-100" alt="...">
+      <img src="image/img 10.avif" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -121,33 +121,33 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-<img src="D-UHP1.0-04022025-Newusersection.avif" class="d-block w-100" alt="...">
-<img src="D-UHP1.0-04022025-Topbannermnz-Headercopy (1).webp" class="d-block w-100" alt="...">
-<img src="D-UHP1.0-04022025-Freedeliverystrip.avif" class="d-block w-100" alt="...">
+<img src="image/img 11.avif" class="d-block w-100" alt="...">
+<img src="image/img 12.avif" class="d-block w-100" alt="...">
+<img src="image/img 13.avif" class="d-block w-100" alt="...">
 <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="10000">
-      <img src="f7bb00914f3068a31fc017bd31ac7cce_128052_0.png" class="d-block w-100" alt="...">
+      <img src="image/img 14.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item" data-bs-interval="2000">
-      <img src="eb139880b0a26655ad35c94a4a4e6949_313945_0.jpg" class="d-block w-100" alt="...">
+      <img src="image/img 15.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="ea9a67d7da019dd21b9bd017fad44be5_313604_0.jpg" class="d-block w-100" alt="...">
+      <img src="image/img 16.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="9a843e520e56eca156b17da9325b5430_314323_0.jpg" class="d-block w-100" alt="...">
+      <img src="image/img 17.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="57841917b45a5e77194131de9d698c79_313621_0.jpg" class="d-block w-100" alt="...">
+      <img src="image/img 18.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="29499bb882c82383023d862be045a25a_313605_0 (1).jpg" class="d-block w-100" alt="...">
+      <img src="image/img 19.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="a4dcbdcaa0bd185d0a26e59b11b397ef_314322_0.jpg" class="d-block w-100" alt="...">
+      <img src="image/img 20.jpg" class="d-block w-100" alt="...">
     </div><div class="carousel-item">
-      <img src="af48ccbb29db0500d89ea67112f80af8_314391_0.jpgs" class="d-block w-100" alt="...">
+      <img src="image/img 21.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -159,51 +159,59 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-<img src="iiimg/D-UHP1.0-02012025-Topbrandtile-headercopy.avif" class="d-block w-100" alt="...">
-<img src="iiimg/D-UHP1.0-04022025-Referfriendsstrip.avif" class="d-block w-100" alt="...">
-<img src="iiimg/D-UHP1.0-04022025-Topbanner-Headercopy.avif" class="d-block w-100" alt="...">
+<img src="image/img 22.avif" class="d-block w-100" alt="...">
+<img src="image/img 23.avif" class="d-block w-100" alt="...">
+<img src="image/img 24.webp" class="d-block w-100" alt="...">
 
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="iiimg/D-1.0-UHP-07022025-mainbanner-z1-p-30to70.gif" class="d-block w-100" alt="...">
+      <img src="image/img 25.gif" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="iiimg/d-1.0-UHP-15022025-BrandHours-Z3-P5-asics.avif" class="d-block w-100" alt="...">
+      <img src="image/img 26.avif" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="iiimg/D-1.0-UHP-31012025-TopBanners-Z3-P2-MS-Blackberry-upto30.avif" class="d-block w-100" alt="...">
+      <img src="image/img 27.avif" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item active">
-      <img src=".iiimg/D-1.0-UHP-31012025-TopBanners-Z3-P3-Gap-MS-upto50.avif." class="d-block w-100" alt="...">
+      <img src="image/img 28.avif" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="iiimg/D-1.0-UHP-31012025-TopBanners-Z3-P4-Eyebogler-Adro-Min70.webp" class="d-block w-100" alt="...">
+      <img src="image/img 29.webp" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="iiimg/D-1.0-UHP-31012025-TopBanners-Z3-P5-Eyebogler-Adro-Min60.avif" class="d-block w-100" alt="...">
+      <img src="image/img 30.avif" class="d-block w-100" alt="...">
     </div>
   </div>
-<img src="iiimg/D-UHP1.0-04022025-Trendssection-Headercopy.webp" class="d-block w-100" alt="...">
-<div class="gg">
-  <img src="iiimg/M-1.0-UHP-19022025-yousta-under299.jpg" class="rounded float-start" alt="..." >
-  <img src="iiimg/D-UHP1.0-04022025-Trendssection-Trendscollection-Min70.avif" class="rounded float-second" alt="...">
-  <img src="iiimg/D-UHP1.0-04022025-Trendssection-Trendsftw-40to80.jpg" class="rounded float-fourth" alt="..." >
-  <img src="iiimg/D-UHP1.0-04022025-Trendssection-Vibenation-Upto70.jpg" class="rounded float- fifth" alt="..." >
-  <img src="lllvt/D-31012025-1.0-MHP-clearancestore-z8-FLAT75.avif" class="rounded float- fifth" alt="..." >
-  <img src="lllvt/DFLAT81.avif" class="rounded float- fifth" alt="..." >
-  <img src="lllvt/D-31-z8-FLAT75.avif" class="rounded float-end" alt="..." >
-
-
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
-  <img src="iiimg/SBI-Reliance 1440x200.avif" class="d-block w-100" alt="...">
-<img src="iiimg/D-UHP.avif" class="d-block w-100" alt="...">
+<img src="image/img 31.webp" class="d-block w-100" alt="...">
+
+
+<div class="gg">
+  <img src="image/img 32.jpg" class="rounded float-start" alt="..." >
+  <img src="image/img 33.avif" class="rounded float-second" alt="...">
+  <img src="image/img 34.jpg" class="rounded float-fourth" alt="..." >
+  <img src="image/img 35.jpg" class="rounded float- fifth" alt="..." >
+  <img src="image/img 36.jpg"  class="rounded float-fourth" alt="..." >
+  <img src="image/img 37.avif" class="rounded float- fifth" alt="..." >
+</div>
+  <img src="image/img 38.avif" class="d-block w-100" alt="...">
+<img src="image/img 39.avif" class="d-block w-100" alt="...">
 <div class="im">
-  <img src="iiimg/D-UHP1.0-04022025-.avif" class="rounded float-start" alt="..." >
-  <img src="iiimg/D-UHP1.0-04022025-Winterwearsection.avif" class="rounded float-second" alt="...">
-  <img src="iiimg/D-UHP1.0-04022025-Winterwearsecti.avif" class="rounded float-third" alt="...">
-  <img src="lllvt/D-UHP1.0-04022025-Winterwearsection-Fortcollins-Montecarlo-Min50.avif" class="rounded float-fourth" alt="..." >
-  <img src="lllvt/D-UHP1.0-04022025-Winterwearsection-M&S-Asos-Min30.avif" class="rounded float- fifth" alt="..." >
+  <img src="image/img 40.avif" class="rounded float-start" alt="..." >
+  <img src="image/img 41.avif" class="rounded float-second" alt="...">
+  <img src="image/img 42.avif" class="rounded float-third" alt="...">
+  <img src="image/img 43.avif" class="rounded float-fourth" alt="..." >
+  <img src="image/img 44.avif" class="rounded float- fifth" alt="..." >
   </div>
 
 </div>
